--- a/style.css
+++ b/style.css
@@ -29,23 +29,28 @@ body {
     background-repeat: no-repeat;
 }
 
+@keyframes move {
+    from {left: 0;}
+    to {left: 80%}
+}
+
 .obstacle {
     background-image: url(monster.png);
     width: 100px;
     height: 100px;
     position: absolute;
     bottom: 50px;
-    left: 80vw;
+    left: 90vw;
     background-size: contain;
     background-repeat: no-repeat;
 }
 
 .animateDora {
-    animation: jump 0.6s ease-in-out;
+    animation: jump 0.5s ease-in-out;
 }
 
 .obstacleAni {
-    animation: moveObstacle 5s linear infinite;
+    animation: moveObstacle 2s linear infinite;
 }
 
 .gameOver {
@@ -99,11 +104,30 @@ button {
 
 @keyframes jump {
     0% { bottom: 50px; }
-    50% { bottom: 250px; }
+    10% {bottom: 100px; }
+    20% {bottom: 150px;}
+    30% {bottom: 200px; }
+    40% {bottom: 250px; }
+    50% { bottom: 300px; }
+    60% {bottom: 250px;}
+    70% {bottom: 200px; }
+    80% {bottom: 150px;}
+    90% {bottom: 100px;}
     100% { bottom: 50px; }
 }
 
 @keyframes moveObstacle {
     0% { left: 100vw; }
-    100% { left: -10vw; }
+    25% {left: 75vw; }
+    30% {left: 70vw;}
+    35% {left: 65vw;}
+    40% {left: 60vw; }
+    50% {left: 50vw;}
+    70% {left: 25vw;}
+    75% {left: 20vw; }
+    80% {left: 15vw; }
+    85% {left: 10vw;}
+    90% {left: 5vw; }
+    95% {left: 0vw; }
+    100% { left: -5vw; }
 }
