--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
     height: 120px;
     position: absolute;
     bottom: 50px;
-    left: 40px;
+    left: 10px;
     background-size: contain;
     background-repeat: no-repeat;
 }
@@ -34,13 +34,24 @@ body {
     to {left: 80%}
 }
 
+.bird {
+    background-image: url(image_no_bg.png);
+    width: 100px;
+    height: 350px;
+    position: absolute;
+    bottom: 50px;
+    left: 120vw;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
 .obstacle {
     background-image: url(monster.png);
     width: 100px;
-    height: 100px;
+    height: 110px;
     position: absolute;
     bottom: 50px;
-    left: 90vw;
+    left: 100vw;
     background-size: contain;
     background-repeat: no-repeat;
 }
@@ -51,6 +62,10 @@ body {
 
 .obstacleAni {
     animation: moveObstacle 2s linear infinite;
+}
+
+.birdlb {
+    animation: movebird 2s linear infinite;
 }
 
 .gameOver {
@@ -130,4 +145,28 @@ button {
     90% {left: 5vw; }
     95% {left: 0vw; }
     100% { left: -5vw; }
+}
+
+@keyframes movebird {
+    0% { left: 110vw; }
+    5% {left: 105vw; }
+    10% {left: 100vw;}
+    15% {left: 95vw;}
+    20% {left: 90vw;}
+    25% {left: 85vw; }
+    30% {left: 80vw;}
+    35% {left: 75vw;}
+    40% {left: 70vw; }
+    45% {left: 65vw;}
+    50% {left: 60vw;}
+    55% {left: 55vw;}
+    60% {left: 50vw;}
+    65% {left: 45vw;}
+    70% {left: 35vw;}
+    75% {left: 30vw;}
+    80% {left: 25vw;}
+    85% {left: 20vw;}
+    90% {left: 15vw; }
+    95% {left: 10vw; }
+    100% {left: 5vw;}
 }
